--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=1024">
     <!-- <meta name="viewport" content="width=device-width, initial-scale=1.0"> -->
-    <title>Reviews</title>
+    <title>Happy New Year 2024</title>
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
