--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <!-- <meta name="viewport" content="width=1024"> -->
+    <!-- Comment by Himanshu -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Happy New Year 2024</title>
     <link rel="stylesheet" href="style.css">
